--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "fastify": "^3.21.3",
+    "fastify-cors": "^6.0.3",
     "fastify-swagger": "^4.12.0",
     "mongoose": "^6.7.3"
   },
